crates/infinity-agent-cli/tests/snapshots/tui_snapshots__after_resize_narrow.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────┐
│                                        │
│                                        │
│                                        │
│                                        │
│Infinity Agent CLI                      │
│Type your messages below. /help for comm│
│                                        │
│> tell me something long                │
│This is a fairly long line of streaming │
│                                        │
│██████████                              │
│────────────────────────────────────────│
│                                        │
│                                        │
│                                        │
│mock-model (/help for commands)0% contex│
└────────────────────────────────────────┘
cursor: row=13 col=1
