crates/infinity-agent-cli/tests/snapshots/tui_snapshots__after_tool_call_response.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> read the config file                                                          │
│◆ read_file(config.toml)                                                        │
│✓ [workspace]                                                                   │
│  members = ["a", "b"]                                                          │
│                                                                                │
│The config defines a workspace.                                                 │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
