crates/infinity-agent-cli/tests/snapshots/tui_snapshots__child_thread_activity_rows.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
assertion_line: 160
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> do things in parallel                                                         │
│                                                                                │
│▄▄▄▄▄▄▄▄▄▄                                                                      │
│aaaa1111 child one is thinking about its task                                   │
│bbbb2222  ◆ execute_command(ls)                                                 │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
