crates/infinity-agent-cli/tests/snapshots/tui_snapshots__session_loaded_updates_model_name.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
assertion_line: 213
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread aaa-bbb                                              │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│aaa-bbb | /help for commands                       mock: Mock Mini · 31% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
title: Other model session
