crates/infinity-agent-cli/tests/snapshots/tui_snapshots__session_loaded_updates_title_and_status.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│                                                                                │
│✦ Loading session — thread f00dcafe-1234-5678-9abc-def012345678                 │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│f00dcafe | /help for commands                     mock: mock-model · 42% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
title: My fancy session
