crates/infinity-agent-cli/tests/snapshots/tui_snapshots__spinner_loading_context_t0.snap
---
source: crates/infinity-agent-cli/tests/tui_snapshots.rs
expression: h.screen()
---
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> hi                                                                            │
│                                                                                │
│▄▄▄▄▄▄▄▄▄▄                                                                      │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
